# todo: how do we concat and compile the assembly stuff
x64_srcs = [
  'arch.c',
]

#JIT_ARCH_X64 = src/jit/x64/emit.o src/jit/x64/arch.o
#JIT_STUB     = src/jit/stub.o
#JIT_OBJECTS  = src/jit/graph.o \
#               src/jit/label.o \
#               src/jit/compile.o \
#               src/jit/dump.o \
#               src/jit/expr.o \
#               src/jit/tile.o \
#               src/jit/linear_scan.o \
#               src/jit/interface.o
#
#
## JIT intermediate files which clean should remove
#JIT_INTERMEDIATES = src/jit/x64/emit.c \
#                    src/jit/x64/tile_pattern.h \
#                    src/jit/core_templates.h
#
#JIT_PERL_LIBS = tools/lib/sexpr.pm tools/lib/expr_ops.pm tools/lib/oplist.pm
